[package]
name = "diffusion"
version = "0.1.0"
edition = "2021"
rust = "1.55"

[dependencies]
rand = "*"
aligned-array = "*"
num-integer = "*"
serde = "*"
serde_derive = "*"
serde_arrays = "*"
serde_json = "*"
indicatif = "*"
ctrlc = "*"

[dev-dependencies]
criterion = "*"
rand_distr = "*"

[[bench]]
name = "benchmarks"
harness = false

# Add symbol information for flamegraph
[profile.release]
debug = true
