[package]
name = "diffusion"
version = "0.1.0"
edition = "2021"

[dependencies]
static_assertions = "*"
cfg-if = "*"
rand = "*"
aligned-array = "*"
num-integer = "*"
serde = "*"
serde_derive = "*"
serde_arrays = "*"
serde_json = "*"
indicatif = "*"
ctrlc = "*"

[dev-dependencies]
criterion = "*"
rand_distr = "*"

[[bench]]
name = "benchmarks"
harness = false

[profile.release]
debug = true  # Add symbol information for flamegraph
#lto = true

[features]
profile = []  # no additional dependencies
